--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
              </li>
              <li class="nav-item">
-                <a class="nav-link" href="index3.html">Info</a>
+                <a class="nav-link" href="193361.html">Info</a>
              </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
